refactor brokerconfigurations